@@ -1,3 +1,10 @@
+2010-10-21  Philippe Brochard  <pbrochard@common-lisp.net>
+
+	* contrib/osd.lisp: New file: OSD (On Screen Display) for
+	presentations.
+
+	* src/clfswm-menu.lisp (open-menu): Modularise function.
+
 2010-10-13  Philippe Brochard  <pbrochard@common-lisp.net>
 
 	* src/clfswm-info.lisp (show-first-aid-kit): Display the essential
